CSS, imagens, icones otimizados. Relatorio do lighthouse dentro dos parametros

--- a/contato.html
+++ b/contato.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Sobre" />
 
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
-    <link rel="preload" href="./css/style.css" as="style" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -60,7 +60,13 @@
           target="_blank"
           href="https://api.whatsapp.com/send?phone=5517997879022&text=Ol%C3%A1!%20Gostaria%20de%20um%20or%C3%A7amento!"
         >
-          <img src="./img/redes/whatsapp-icone.svg" /> Entrar em contato</a
+          <img
+            width="32"
+            height="32"
+            src="./img/redes/whatsapp-icone.svg"
+            alt="WhatsApp"
+          />
+          Entrar em contato</a
         >
       </div>
 
@@ -116,7 +122,7 @@
     </section>
 
     <div class="mapa container">
-      <a href="./">
+      <a target="_blank" href="https://goo.gl/maps/SLARg4fGvunNy2DE6">
         <picture>
           <source
             media="(max-width: 600px)"
