--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     />
 
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
-    <link rel="preload" href="./css/style.css" as="style" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -49,7 +49,7 @@
         <div class="introducao container">
           <div class="introducao-conteudo">
             <h1 class="font-1-xxl">Assistência técnica especializada.</h1>
-            <p class="font-2-l cor-5">
+            <p class="font-2-l cor-4">
               Reparos de alta qualidade em celulares, tablets, notebooks e
               desktops.
             </p>
