--- a/servicos.html
+++ b/servicos.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Serviços" />
 
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
-    <link rel="preload" href="./css/style.css" as="style" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,6 +58,8 @@
         <div class="reparos-item">
           <img
             src="./img/fotos/servicos/celular.jpg"
+            width="520"
+            height="440"
             alt="Celular desmontado"
             class="reparos-imagem"
           />
@@ -65,31 +67,66 @@
 
           <ul class="font-2-s-b cor-8">
             <li>
-              <img src="./img/icones/servicos/celular-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/celular-icone.svg"
+                alt=""
+              />
               Tela
             </li>
             <li>
-              <img src="./img/icones/servicos/bateria-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/bateria-icone.svg"
+                alt=""
+              />
               Bateria
             </li>
             <li>
-              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/conector-icone.svg"
+                alt=""
+              />
               Conector
             </li>
             <li>
-              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/placa-icone.svg"
+                alt=""
+              />
               Placa
             </li>
             <li>
-              <img src="./img/icones/servicos/power-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/power-icone.svg"
+                alt=""
+              />
               Botão Power
             </li>
             <li>
-              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/altofalante-icone.svg"
+                alt=""
+              />
               Alto-falante
             </li>
             <li>
-              <img src="./img/icones/servicos/camera-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/camera-icone.svg"
+                alt=""
+              />
               Câmera
             </li>
           </ul>
@@ -98,6 +135,8 @@
         <div class="reparos-item">
           <img
             src="./img/fotos/servicos/tablet.jpg"
+            width="520"
+            height="440"
             alt="Tablet desmontado"
             class="reparos-imagem"
           />
@@ -105,34 +144,69 @@
 
           <ul class="font-2-s-b cor-8">
             <li>
-              <img src="./img/icones/servicos/celular-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/celular-icone.svg"
+                alt=""
+              />
               Tela
             </li>
             <li>
-              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/placa-icone.svg"
+                alt=""
+              />
               Placa
             </li>
             <li>
-              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/altofalante-icone.svg"
+                alt=""
+              />
               Alto-falante
             </li>
             <li>
-              <img src="./img/icones/servicos/bateria-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/bateria-icone.svg"
+                alt=""
+              />
               Bateria
             </li>
 
             <li>
-              <img src="./img/icones/servicos/power-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/power-icone.svg"
+                alt=""
+              />
               Botão Power
             </li>
 
             <li>
-              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/conector-icone.svg"
+                alt=""
+              />
               Conector
             </li>
 
             <li>
-              <img src="./img/icones/servicos/camera-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/camera-icone.svg"
+                alt=""
+              />
               Câmera
             </li>
           </ul>
@@ -141,6 +215,8 @@
         <div class="reparos-item">
           <img
             src="./img/fotos/servicos/notebook.jpg"
+            width="520"
+            height="440"
             alt="Notebook desmontado"
             class="reparos-imagem"
           />
@@ -148,31 +224,66 @@
 
           <ul class="font-2-s-b cor-8">
             <li>
-              <img src="./img/icones/servicos/notebook-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/notebook-icone.svg"
+                alt=""
+              />
               Tela
             </li>
             <li>
-              <img src="./img/icones/servicos/carcaca-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/carcaca-icone.svg"
+                alt=""
+              />
               Carcaça
             </li>
             <li>
-              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/placa-icone.svg"
+                alt=""
+              />
               Placa
             </li>
             <li>
-              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/conector-icone.svg"
+                alt=""
+              />
               Conector
             </li>
             <li>
-              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/altofalante-icone.svg"
+                alt=""
+              />
               Alto-falante
             </li>
             <li>
-              <img src="./img/icones/servicos/formatacao-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/formatacao-icone.svg"
+                alt=""
+              />
               Formatação
             </li>
             <li>
-              <img src="./img/icones/servicos/higienizacao-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/higienizacao-icone.svg"
+                alt=""
+              />
               Higienização
             </li>
           </ul>
@@ -180,6 +291,8 @@
 
         <div class="reparos-item">
           <img
+            width="520"
+            height="440"
             src="./img/fotos/servicos/computador.jpg"
             alt="Computador desmontado"
             class="reparos-imagem"
@@ -188,19 +301,39 @@
 
           <ul class="font-2-s-b cor-8">
             <li>
-              <img src="./img/icones/servicos/upgrade-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/upgrade-icone.svg"
+                alt=""
+              />
               Upgrade
             </li>
             <li>
-              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/placa-icone.svg"
+                alt=""
+              />
               Placa
             </li>
             <li>
-              <img src="./img/icones/servicos/formatacao-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/formatacao-icone.svg"
+                alt=""
+              />
               Formatação
             </li>
             <li>
-              <img src="./img/icones/servicos/higienizacao-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/higienizacao-icone.svg"
+                alt=""
+              />
               Higienização
             </li>
           </ul>
@@ -231,7 +364,12 @@
 
         <ul class="container">
           <li class="diferenciais-conteudo">
-            <img src="./img/icones/diferenciais/garantia-icone.svg" alt="" />
+            <img
+              width="48"
+              height="48"
+              src="./img/icones/diferenciais/garantia-icone.svg"
+              alt=""
+            />
             <p class="font-2-l-b cor-10">Garantia</p>
 
             <p class="font-2-xs cor-9">
@@ -240,7 +378,12 @@
           </li>
 
           <li class="diferenciais-conteudo">
-            <img src="./img/icones/diferenciais/pecas-icone.svg" alt="" />
+            <img
+              width="48"
+              height="48"
+              src="./img/icones/diferenciais/pecas-icone.svg"
+              alt=""
+            />
             <p class="font-2-l-b cor-10">Peças Premium</p>
 
             <p class="font-2-xs cor-9">
@@ -249,14 +392,24 @@
           </li>
 
           <li class="diferenciais-conteudo">
-            <img src="./img/icones/diferenciais/preco-icone.svg" alt="" />
+            <img
+              width="48"
+              height="48"
+              src="./img/icones/diferenciais/preco-icone.svg"
+              alt=""
+            />
             <p class="font-2-l-b cor-10">Custo-benefício</p>
 
             <p class="font-2-xs cor-9">Melhor qualidade com o menor preço.</p>
           </li>
 
           <li class="diferenciais-conteudo">
-            <img src="./img/icones/diferenciais/tempo-icone.svg" alt="" />
+            <img
+              width="48"
+              height="48"
+              src="./img/icones/diferenciais/tempo-icone.svg"
+              alt=""
+            />
             <p class="font-2-l-b cor-10">Atendimento rápido</p>
 
             <p class="font-2-xs cor-9">
