--- a/contato.html
+++ b/contato.html
@@ -18,10 +18,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Saira:wght@500;600&display=swap"
       rel="stylesheet"
     />
+
+    <script>
+      document.documentElement.classList.add('js')
+    </script>
   </head>
   <body>
     <header class="header-bg paginas">
-      <div class="header paginas container">
+      <div data-anime="400" class="header paginas container fadeInDown">
         <a href="./">
           <img
             src="./img/ribeirotecnologia.svg"
@@ -42,13 +46,15 @@
 
       <div class="titulo">
         <div>
-          <h1 class="font-1-xxl cor-1">Contato<span class="cor-p4">.</span></h1>
+          <h1 data-anime="800" class="font-1-xxl cor-1 fadeInDown">
+            Contato<span class="cor-p4">.</span>
+          </h1>
         </div>
       </div>
     </header>
 
     <section class="contato container">
-      <div class="contato-cta">
+      <div data-anime="1000" class="contato-cta fadeInLeft">
         <h2 class="font-1-xl cor-11">
           Entre em contato com a gente<span class="cor-p2">!</span>
         </h2>
@@ -70,7 +76,7 @@
         >
       </div>
 
-      <div class="font-2-l cor-8">
+      <div data-anime="1000" class="font-2-l cor-8 fadeInRight">
         <div class="contato-endereco">
           <p>Rua da Fé, 517 - Jardim Urano</p>
           <p>São José do Rio Preto - SP</p>
@@ -198,12 +204,18 @@
           <p>Ribeiro Tecnologia © Todos os direitos reservados.</p>
           <p>
             Desenvolvido por
-            <a class="font-2-s-b" href="https://github.com/luc-ribeiro"
+            <a
+              target="_blank"
+              class="font-2-s-b"
+              href="https://github.com/luc-ribeiro"
               >Lucas Ribeiro</a
             >
           </p>
         </div>
       </div>
     </footer>
+
+    <script src="./js/plugins/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
