--- a/sobre.html
+++ b/sobre.html
@@ -7,8 +7,13 @@
 
     <title>Sobre | Ribeiro Tecnologia</title>
     <meta name="description" content="Sobre" />
-
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
+
     <link rel="preload" href="./css/style.min.css" as="style" />
     <link rel="stylesheet" href="./css/style.min.css" />
 
@@ -18,10 +23,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Saira:wght@500;600&display=swap"
       rel="stylesheet"
     />
+
+    <script>
+      document.documentElement.classList.add('js')
+    </script>
   </head>
   <body>
     <header class="header-bg paginas">
-      <div class="header paginas container">
+      <div data-anime="400" class="header paginas container fadeInDown">
         <a href="./">
           <img
             src="./img/ribeirotecnologia.svg"
@@ -42,14 +51,14 @@
 
       <div class="titulo">
         <div>
-          <h1 class="font-1-xxl cor-1">
+          <h1 data-anime="800" class="font-1-xxl cor-1 fadeInDown">
             Sobre nós<span class="cor-p4">.</span>
           </h1>
         </div>
       </div>
     </header>
 
-    <article class="sobre container">
+    <article data-anime="1000" class="sobre container fadeInDown">
       <h2 class="font-1-xl cor-11">
         Conheça a <span class="cor-p2">Ribeiro Tecnologia.</span>
       </h2>
@@ -105,74 +114,90 @@
         />
       </div>
     </article>
-
     <section class="depoimentos-bg">
       <div class="depoimentos container">
         <header>
           <h2 class="font-1-xl cor-0">Depoimentos.</h2>
-          <p class="font-2-l cor-3">O que nossos clientes dizem sobre nós.</p>
+          <p class="font-2-l cor-5">O que nossos clientes dizem sobre nós.</p>
         </header>
 
-        <ul class="container">
-          <li class="depoimento-conteudo">
-            <blockquote>
-              <p class="font-2-xs cor-9">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Suspendisse sagittis arcu quis nisi luctus,
-              </p>
-              <div class="autor">
-                <img
-                  src="./img/avatares/avatar1.jpg"
-                  width="32"
-                  height="32"
-                  alt=""
-                />
-                <span class="font-1-xs cor-7">Lucas Ribeiro</span>
-              </div>
-            </blockquote>
-          </li>
+        <div class="swiper mySwiper">
+          <div class="depoimentos-container swiper-wrapper">
+            <div class="depoimento swiper-slide">
+              <blockquote>
+                <p class="font-2-xs cor-9">
+                  Profissionais dispostos a explicar a solução de forma
+                  objetiva; ambiente agradável e aconchegante; preço competitivo
+                  e serviço eficaz. Recomendo.
+                </p>
+                <div class="autor">
+                  <img
+                    src="./img/avatares/avatar4.jpg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />
+                  <span class="font-1-xs cor-7"> Henrique de Oliveira </span>
+                </div>
+              </blockquote>
+            </div>
 
-          <li class="depoimento-conteudo">
-            <blockquote>
-              <p class="font-2-xs cor-9">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Suspendisse sagittis arcu quis nisi luctus,
-              </p>
-              <div class="autor">
-                <img
-                  src="./img/avatares/avatar1.jpg"
-                  width="32"
-                  height="32"
-                  alt=""
-                />
-                <span class="font-1-xs cor-7">Lucas Ribeiro</span>
-              </div>
-            </blockquote>
-          </li>
+            <div class="depoimento swiper-slide">
+              <blockquote>
+                <p class="font-2-xs cor-9">
+                  Ótimos profissionais! atendimento perfeito e super eficiente,
+                  recomendo!
+                </p>
+                <div class="autor">
+                  <img
+                    src="./img/avatares/avatar3.jpg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />
+                  <span class="font-1-xs cor-7"> Nathalia Ribeiro </span>
+                </div>
+              </blockquote>
+            </div>
 
-          <li class="depoimento-conteudo">
-            <blockquote>
-              <p class="font-2-xs cor-9">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Suspendisse sagittis arcu quis nisi luctus,
-              </p>
-              <div class="autor">
-                <img
-                  src="./img/avatares/avatar1.jpg"
-                  width="32"
-                  height="32"
-                  alt=""
-                />
-                <span class="font-1-xs cor-7">Lucas Ribeiro</span>
-              </div>
-            </blockquote>
-          </li>
-        </ul>
+            <div class="depoimento swiper-slide">
+              <blockquote>
+                <p class="font-2-xs cor-9">
+                  Ótimo serviço e profissionais cuidadosos e bem preparados.
+                  Recomendo!
+                </p>
+                <div class="autor">
+                  <img
+                    src="./img/avatares/avatar2.jpg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />
+                  <span class="font-1-xs cor-7"> Jaqueline Romanholo </span>
+                </div>
+              </blockquote>
+            </div>
 
-        <div class="navegacao">
-          <span class="bullet active"></span>
-          <span class="bullet"></span>
-          <span class="bullet"></span>
+            <div class="depoimento swiper-slide">
+              <blockquote>
+                <p class="font-2-xs cor-9">
+                  Sou cliente da Ribeiro há 3 anos, sempre me atendem muito bem
+                  e resolvem meus problemas.
+                </p>
+                <div class="autor">
+                  <img
+                    src="./img/avatares/avatar.jpg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />
+                  <span class="font-1-xs cor-7"> Lucas Siviero </span>
+                </div>
+              </blockquote>
+            </div>
+          </div>
+
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
@@ -237,12 +262,19 @@
           <p>Ribeiro Tecnologia © Todos os direitos reservados.</p>
           <p>
             Desenvolvido por
-            <a class="font-2-s-b" href="https://github.com/luc-ribeiro"
+            <a
+              target="_blank"
+              class="font-2-s-b"
+              href="https://github.com/luc-ribeiro"
               >Lucas Ribeiro</a
             >
           </p>
         </div>
       </div>
     </footer>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="./js/plugins/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
